--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "A brief description of your app",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
+    "test": "echo 'No tests specified' && exit 0"
+  },
   "dependencies": {
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
@@ -7,5 +17,13 @@
     "express": "^4.19.2",
     "mysql2": "^3.11.0",
     "react-router-dom": "^6.26.1"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14.x"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
