--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "A brief description of your app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step required'",
-    "test": "echo 'No tests specified' && exit 0"
+  "start": "node src/server.js",
+  "dev": "nodemon server.js",
+  "build": "echo 'No build step required'",
+  "test": "echo 'No tests specified' && exit 0"
   },
   "dependencies": {
     "axios": "^1.7.4",
