--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "A brief description of your app",
   "main": "server.js",
   "scripts": {
-  "start": "node src/server.js",
-  "dev": "nodemon server.js",
-  "build": "echo 'No build step required'",
-  "test": "echo 'No tests specified' && exit 0"
+    "start": "node src/server.js",
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
+    "test": "echo 'No tests specified' && exit 0"
   },
   "dependencies": {
     "axios": "^1.7.4",
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "react-router-dom": "^6.26.1"
   },
@@ -25,5 +26,6 @@
     "node": ">=14.x"
   },
   "author": "Your Name",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": []
 }
